RF: Move package files to packages/ directory.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
                     </div>
                     <div id="pr{{ package.tag }}" class="panel-collapse collapse in">
                         <div class="panel-body">
-                        <p>{{ package.description }}</p> <a href="{{ site.baseurl }}{{ package.tag }}.html"> <span style="float:right">learn more</a></span></p>
+                        <p>{{ package.description }}</p> <a href="{{ site.baseurl }}packages/{{ package.tag }}.html"> <span style="float:right">learn more</a></span></p>
                         </div>
                     </div>
                 </div>
