RF: Make packages collection; use package-categories to define grouping info.

--- a/_packages/mne.html
+++ b/_packages/mne.html
@@ -1,5 +1,11 @@
 ---
 layout: package
+name: "MNE"
+tag: "mne"
+doc: "http://martinos.org/mne/stable/index.html"
+github: "https://github.com/mne-tools/mne-python"
+description: "MNE is a software package for processing magnetoencephalography (MEG) and electroencephalography (EEG) data"
+category: "human-electrophysiology"
 ---
 
 <p>The MNE software computes cortically-constrained L2 minimum-norm current estimates and associated dynamic statistical parametric maps from MEG and EEG data, optionally constrained by fMRI.</p>
