--- a/_packages/nibabel.html
+++ b/_packages/nibabel.html
@@ -1,5 +1,11 @@
 ---
 layout: package
+name: "nibabel"
+tag: "nibabel"
+doc: "http://nipy.org/nibabel/"
+github: "https://github.com/nipy/nibabel"
+description: "Read / write access to some common neuroimaging file formats."
+category: "file-data-management"
 ---
 
 <p>This package provides read +/- write access to some common medical and neuroimaging file formats, including: ANALYZE (plain, SPM99, SPM2 and later), GIFTI, NIfTI1, NIfTI2, MINC1, MINC2, MGH and ECAT as well as Philips PAR/REC. We can read and write Freesurfer geometry, and read Freesurfer morphometry and annotation files. There is some very limited support for DICOM. NiBabel is the successor of PyNIfTI.</p>
