--- a/_packages/nitime.html
+++ b/_packages/nitime.html
@@ -1,5 +1,11 @@
 ---
 layout: package
+name: "Nitime"
+tag: "nitime"
+doc: "http://nipy.org/nitime/"
+github: "https://github.com/nipy/nitime"
+description: "Nitime is a library for time-series analysis of data from neuroscience experiments."
+category: "functional-mri"
 ---
 
 <p>It contains a core of numerical algorithms for time-series analysis both in the time and spectral domains, a set of container objects to represent time-series, and auxiliary objects that expose a high level interface to the numerical machinery and make common analysis tasks easy to express with compact and semantically clear code.</p>
