--- a/_packages/sdm.html
+++ b/_packages/sdm.html
@@ -1,5 +1,11 @@
 ---
 layout: package
+name: "Scitran SDM"
+tag: "sdm"
+doc: "https://scitran.github.io/"
+github: "https://github.com/scitran/sdm"
+description: "SciTran SDM delivers efficient and robust archiving, organization, and sharing of scientific data"
+category: "file-data-management"
 ---
 
 <h4>We have developed the system around neuroimaging data, but our goal is to build a system that is flexible enough to accommodate all types of scientific data – from paper-and-pencil tests to genomics data. SDM will also allow for the sharing of data and computations between remote sites.</h4>
