--- a/_packages/nipype.html
+++ b/_packages/nipype.html
@@ -1,5 +1,11 @@
 ---
 layout: package
+name: "nipype"
+tag: "nipype"
+doc: "http://www.mit.edu/~satra/nipype-nightly/"
+github: "https://github.com/nipy/nipype"
+description: "Nipype provides a uniform interface to existing neuroimaging software and facilitates interaction between these packages within a single workflow."
+category: "analysis-pipeline-management"
 ---
 
 <p>Nipype, an open-source, community-developed initiative under the umbrella of NiPy, is a Python project that provides a uniform interface to existing neuroimaging software and facilitates interaction between these packages within a single workflow. Nipype provides an environment that encourages interactive exploration of algorithms from different packages (e.g., ANTS, SPM, FSL, FreeSurfer, Camino, MRtrix, MNE, AFNI, Slicer), eases the design of workflows within and between packages, and reduces the learning curve necessary to use different packages. Nipype is creating a collaborative platform for neuroimaging software development in a high-level language and addressing limitations of existing pipeline systems.</p>
