--- a/_packages/pymvpa.html
+++ b/_packages/pymvpa.html
@@ -1,5 +1,11 @@
 ---
 layout: package
+name: "PyMVPA"
+tag: "pymvpa"
+doc: "http://www.pymvpa.org/"
+github: "https://github.com/PyMVPA/PyMVPA"
+description: "PyMVPA is a Python package intended to ease statistical learning analyses of large datasets."
+category: "machine-learning"
 ---
 
 <h4>PyMVPA is a Python package intended to ease statistical learning analyses of large datasets. It offers an extensible framework with a high-level interface to a broad range of algorithms for classification, regression, feature selection, data import and export. It is designed to integrate well with related software packages, such as scikit-learn, shogun, MDP, etc. While it is not limited to the neuroimaging domain, it is eminently suited for such datasets. PyMVPA is free software and requires nothing but free-software to run.</h4>
