--- a/contribute.html
+++ b/contribute.html
@@ -73,6 +73,6 @@ layout: default
 {% endfor %}
 
 <p>Thanks for stopping by!</p>
-<img src="http://nipy.github.io/images/reggie.png"/>
+<img src="{{ site.baseurl }}img/reggie.png"/>
 
 </div>
