RF: make consistent use of baseurl, avoid replace '//','/'

--- a/contribute.html
+++ b/contribute.html
@@ -73,6 +73,6 @@ layout: default
 {% endfor %}
 
 <p>Thanks for stopping by!</p>
-<img src="{{ site.baseurl }}img/reggie.png"/>
+<img src="{{ '/img/reggie.png | prepend: site.baseurl }}"/>
 
 </div>
