--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@ layout: default
 ---
 
 <h2 style="margin-top:20px; margin-bottom:20px">nipy.github.io</h2>
-<a href="{{ site.baseurl }}">
-    <img src="{{ site.baseurl }}" >
-</a>
 
-<p>Welcome to NIPY. The NIPY community is a community of practice devoted to the use of the Python programming language in the analysis of neuroimaging data. You can find us on <a href="https://github.com/nipy" target="_blank">github</a>, as well as <a href="http://neuroimaging.tumblr.com" target="_blank">social media</a>. We welcome <a href="{{ site.baseurl }}contribute.html">contributions</a> and welcome you to read about our <a href="{{ site.baseurl }}conduct.html">standards of conduct</a>, or <a href="{{ site.baseurl }}help.html">ask for help.</a> We develop the following projects:</p>
+<p>Welcome to NIPY. The NIPY community is a community of practice devoted to the use of the Python programming language in the analysis of neuroimaging data. You can find us on <a href="https://github.com/nipy" target="_blank">github</a>, as well as <a href="http://neuroimaging.tumblr.com" target="_blank">social media</a>. We welcome <a href="{{ '/contribute.html' | prepend: site.baseurl">contributions</a> and welcome you to read about our <a href="{{ '/conduct.html' | prepend: site.baseurl }}">standards of conduct</a>, or <a href="{{ '/help.html' | prepend: site.baseurl }}">ask for help.</a> We develop the following projects:</p>
 
 <div class="panel-group" id="accordion">
         {% for category in site.data.package-categories %}
@@ -24,7 +21,7 @@ layout: default
                     <div id="pr{{ package.tag }}" class="panel-collapse collapse in">
                         <div class="panel-body">
                         <p>{{ package.description }}</p>
-                        <a href="{{ package.url | prepend: site.baseurl | replace:'//','/'}}">
+                        <a href="{{ package.url | prepend: site.baseurl }}">
                             <span style="float:right">learn more</span>
                         </a>
                         </div>
