--- a/index.html
+++ b/index.html
@@ -2,34 +2,41 @@
 layout: default
 ---
 
+<style>
+    h2 { margin-top:20px; margin-bottom:20px; }
+    .panel { margin-top: 15px; }
+    li { list-style-type: none; margin-bottom: 10px; }
+    a.package-name { text-decoration: underline }
+    .fa-github { color: #666; }
+    .fa-home { color: #333; margin-right: 5px; }
+</style>
+
 <h2 style="margin-top:20px; margin-bottom:20px">{{ site.url }}</h2>
 
 <p>Welcome to NIPY. The NIPY community is a community of practice devoted to the use of the Python programming language in the analysis of neuroimaging data. You can find us on <a href="https://github.com/nipy" target="_blank">github</a>, as well as <a href="http://neuroimaging.tumblr.com" target="_blank">social media</a>. We welcome <a href="{{ '/contribute.html' | prepend: site.baseurl">contributions</a> and welcome you to read about our <a href="{{ '/conduct.html' | prepend: site.baseurl }}">standards of conduct</a>, or <a href="{{ '/help.html' | prepend: site.baseurl }}">ask for help.</a> We develop the following projects:</p>
 
 <div class="panel-group" id="accordion">
-        {% for category in site.data.package-categories %}
-                <div class="panel panel-default" style="margin-top: 15px;">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" data-parent="#accordion" href="#pr{{ category.tag }}">{{ category.subtitle }}</a>
-                        </h4>
-                    </div>
-                    <div id="pr{{ category.tag }}" class="panel-collapse collapse in">
-                        <div class="panel-body">
-            {% for package in site.packages %}
-                {% if package.category == category.tag %}
-                            <li style="list-style-type: none; margin-bottom: 10px;">
-                            <a href="{{ package.github }}" target="_blank"><i style="color:#666;" class="fa fa-github"> </i></a>
-                            <a href="{{ package.doc }}" target="_blank"><i style="color:#333;margin-right:5px" class="fa fa-home"></i></a>
-                            <a href="{{ package.url | prepend: site.baseurl }}" style="text-decoration: underline">
-                                {{ package.name }}
-                            </a>
-                             - {{ package.description }}
-                            </li>
-                {% endif %}
-             {% endfor %}
-                        </div>
-                    </div>
+    {% for category in site.data.package-categories %}
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#pr{{ category.tag }}">{{ category.subtitle }}</a>
+                </h4>
+            </div>
+            <div id="pr{{ category.tag }}" class="panel-collapse collapse in">
+                <div class="panel-body">
+        {% for package in site.packages %}
+            {% if package.category == category.tag %}
+                    <li>
+                        <a href="{{ package.github }}" target="_blank"><i class="fa fa-github"> </i></a>
+                        <a href="{{ package.doc }}" target="_blank"><i class="fa fa-home"></i></a>
+                        <a class="package-name" href="{{ package.url | prepend: site.baseurl }}">{{ package.name }}</a>
+                         - {{ package.description }}
+                    </li>
+            {% endif %}
+         {% endfor %}
                 </div>
-       {% endfor %}
+            </div>
+        </div>
+   {% endfor %}
 </div>
