Add 'one-liner' field.

--- a/_packages/dipy.html
+++ b/_packages/dipy.html
@@ -4,6 +4,7 @@ name: "dipy"
 tag: "dipy"
 doc: "http://nipy.org/dipy/"
 github: "https://github.com/nipy/dipy"
-description: "Dipy is a free and open source software project focusing mainly on diffusion magnetic resonance imaging (dMRI) analysis."
+one-liner: "Focuses on diffusion magnetic resonance imaging (dMRI) analysis."
+description: "Dipy is a free and open source software project focusing on diffusion magnetic resonance imaging (dMRI) analysis."
 category: "diffusion-mri"
 ---
