--- a/_packages/mne.html
+++ b/_packages/mne.html
@@ -4,7 +4,8 @@ name: "MNE"
 tag: "mne"
 doc: "http://martinos.org/mne/stable/index.html"
 github: "https://github.com/mne-tools/mne-python"
-description: "MNE is a software package for processing magnetoencephalography (MEG) and electroencephalography (EEG) data"
+one-liner: "Processes magnetoencephalography (MEG) and electroencephalography (EEG) data."
+description: "MNE is a software package for processing magnetoencephalography (MEG) and electroencephalography (EEG) data."
 category: "human-electrophysiology"
 ---
 
