--- a/_packages/nibabel.html
+++ b/_packages/nibabel.html
@@ -4,7 +4,8 @@ name: "nibabel"
 tag: "nibabel"
 doc: "http://nipy.org/nibabel/"
 github: "https://github.com/nipy/nibabel"
-description: "Read / write access to some common neuroimaging file formats."
+one-liner: "Read / write common neuroimaging file formats."
+description: "Nibabel aims to provide read/write access to some common neuroimaging file formats."
 category: "file-data-management"
 ---
 
