--- a/_packages/nitime.html
+++ b/_packages/nitime.html
@@ -4,7 +4,8 @@ name: "Nitime"
 tag: "nitime"
 doc: "http://nipy.org/nitime/"
 github: "https://github.com/nipy/nitime"
-description: "Nitime is a library for time-series analysis of data from neuroscience experiments."
+one-liner: "Time-series analysis of neuroscience data."
+description: "Nitime is a library for time-series analysis of neuroscience data."
 category: "functional-mri"
 ---
 
