--- a/_packages/pymvpa.html
+++ b/_packages/pymvpa.html
@@ -4,6 +4,7 @@ name: "PyMVPA"
 tag: "pymvpa"
 doc: "http://www.pymvpa.org/"
 github: "https://github.com/PyMVPA/PyMVPA"
+one-liner: "Eases statistical learning analyses of large neuroimaging datasets."
 description: "PyMVPA is a Python package intended to ease statistical learning analyses of large datasets."
 category: "machine-learning"
 ---
