--- a/_packages/sdm.html
+++ b/_packages/sdm.html
@@ -4,6 +4,7 @@ name: "Scitran SDM"
 tag: "sdm"
 doc: "https://scitran.github.io/"
 github: "https://github.com/scitran/sdm"
+one-liner: "Delivers efficient and robust archiving, organization, and sharing of scientific data."
 description: "SciTran SDM delivers efficient and robust archiving, organization, and sharing of scientific data"
 category: "file-data-management"
 ---
