--- a/_packages/nilearn.html
+++ b/_packages/nilearn.html
@@ -4,6 +4,7 @@ name: "Nilearn"
 tag: "nilearn"
 doc: "http://nilearn.github.io"
 github: "https://github.com/nilearn/nilearn"
-description: "Nilearn is a Python module for fast and easy statistical learning on NeuroImaging data."
+one-liner: "Fast and easy statistical learning on neuroimaging data."
+description: "Nilearn is a Python module for fast and easy statistical learning on neuroimaging data."
 category: "machine-learning"
 ---
