--- a/_packages/nipy.html
+++ b/_packages/nipy.html
@@ -4,6 +4,7 @@ name: "Nipy"
 tag: "nipy"
 doc: "http://nipy.org/nipy/"
 github: "https://github.com/nipy"
+one-liner: "Analysis of structural and functional neuroimaging data."
 description: "NIPY is not only the name of the Neuroimaging in Python community, but also a python project for analysis of structural and functional neuroimaging data."
 category: "functional-mri"
 ---
