--- a/_packages/nipype.html
+++ b/_packages/nipype.html
@@ -4,6 +4,7 @@ name: "nipype"
 tag: "nipype"
 doc: "http://www.mit.edu/~satra/nipype-nightly/"
 github: "https://github.com/nipy/nipype"
+one-liner: "Provides a uniform interface to existing neuroimaging software."
 description: "Nipype provides a uniform interface to existing neuroimaging software and facilitates interaction between these packages within a single workflow."
 category: "analysis-pipeline-management"
 ---
