Small rewording of the introduction sentences on the front page.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@ layout: default
 
 <h2 style="margin-top:20px; margin-bottom:20px">{{ site.url }}</h2>
 
-<p>Welcome to NIPY. The NIPY community is a community of practice devoted to the use of the Python programming language in the analysis of neuroimaging data. You can find us on <a href="https://github.com/nipy" target="_blank">github</a>, as well as <a href="http://neuroimaging.tumblr.com" target="_blank">social media</a>. We welcome <a href="{{ '/contribute.html' | prepend: site.baseurl">contributions</a> and welcome you to read about our <a href="{{ '/conduct.html' | prepend: site.baseurl }}">standards of conduct</a>, or <a href="{{ '/help.html' | prepend: site.baseurl }}">ask for help.</a> We develop the following projects:</p>
+<p>
+Welcome to NIPY. We are a <a href="https://en.wikipedia.org/wiki/Community_of_practice" target="_blank">community of practice</a> devoted to the use of the Python programming language in the analysis of neuroimaging data. You can find us on <a href="https://github.com/nipy" target="_blank">github</a>, as well as social media <a href="http://neuroimaging.tumblr.com" target="_blank">[blog]</a> <a href="https://twitter.com/nipyorg" target="_blank">[twitter]</a>. We welcome <a href="{{ '/contribute.html' | prepend: site.baseurl }}" target="_blank">contributions</a> and ask that you read about our <a href="{{ '/conduct.html' | prepend: site.baseurl }}" target="_blank">standards of conduct</a>. You are also invited to <a href="{{ '/help.html' | prepend: site.baseurl }}" target="_blank">ask for help.</a>
+</p>
+
+<p>
+We develop the following projects:
+</p>
 
 <div class="panel-group" id="accordion">
     {% for category in site.data.package-categories %}
