Every opening '{{' needs its closing '}}'

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@ Welcome to NIPY. We are a <a href="https://en.wikipedia.org/wiki/Community_of_pr
 
 You can find us on <a href="https://github.com/nipy" target="_blank">github</a>, as well as <a href="http://neuroimaging.tumblr.com" target="_blank">social media</a>.
 
-We welcome you to join us! We welcome <a href="{{ '/contribute.html' | prepend: site.baseurl">contributions</a> and welcome you to read about our <a href="{{ '/conduct.html' | prepend: site.baseurl }}">standards of conduct</a>. You are also invited to <a href="{{ '/help.html' | prepend: site.baseurl }}">ask for help.</a>
+We welcome you to join us!
+
+We welcome <a href="{{ '/contribute.html' | prepend: site.baseurl}}">contributions</a>
+
+and welcome you to read about our <a href="{{ '/conduct.html' | prepend: site.baseurl }}">standards of conduct</a>.
+
+You are also invited to <a href="{{ '/help.html' | prepend: site.baseurl }}">ask for help.</a>
 
 We develop the following projects:</p>
 
