--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@ Welcome to NIPY. We are a <a href="https://en.wikipedia.org/wiki/Community_of_pr
 You can find us on <a href="https://github.com/nipy" target="_blank">github</a>, as well as <a href="http://neuroimaging.tumblr.com" target="_blank">social media</a>.
 
 We welcome you to join us!
+</p>
 
+<p>
 We welcome <a href="{{ '/contribute.html' | prepend: site.baseurl }}">contributions</a>
 
-and welcome you to read about our <a href="{{ '/conduct.html' | prepend: site.baseurl }}">standards of conduct</a>.
+and ask that you read about our <a href="{{ '/conduct.html' | prepend: site.baseurl }}">standards of conduct</a>.
 
 You are also invited to <a href="{{ '/help.html' | prepend: site.baseurl }}">ask for help.</a>
+</p>
 
-We develop the following projects:</p>
+<p>
+We develop the following projects:
+</p>
 
 <div class="panel-group" id="accordion">
     {% for category in site.data.package-categories %}
