--- a/index.html
+++ b/index.html
@@ -14,17 +14,7 @@ layout: default
 <h2 style="margin-top:20px; margin-bottom:20px">{{ site.url }}</h2>
 
 <p>
-
-Welcome to NIPY. We are a <a href="https://en.wikipedia.org/wiki/Community_of_practice">community of practice</a> devoted to the use of the Python programming language in the analysis of neuroimaging data.
-
-You can find us on <a href="https://github.com/nipy" target="_blank">github</a>, as well as <a href="http://neuroimaging.tumblr.com" target="_blank">social</a> <a href="https://twitter.com/nipyorg" target="_blank">media</a>.
-
-</p>
-
-<p>
-We welcome you to join us!
-
-We welcome <a href="{{ '/contribute.html' | prepend: site.baseurl }}" target="_blank">contributions</a> and ask that you read about our <a href="{{ '/conduct.html' | prepend: site.baseurl }}" target="_blank">standards of conduct</a>. You are also invited to <a href="{{ '/help.html' | prepend: site.baseurl }}" target="_blank">ask for help.</a>
+Welcome to NIPY. We are a <a href="https://en.wikipedia.org/wiki/Community_of_practice" target="_blank">community of practice</a> devoted to the use of the Python programming language in the analysis of neuroimaging data. You can find us on <a href="https://github.com/nipy" target="_blank">github</a>, as well as social media <a href="http://neuroimaging.tumblr.com" target="_blank">[blog]</a> <a href="https://twitter.com/nipyorg" target="_blank">[twitter]</a>. We welcome <a href="{{ '/contribute.html' | prepend: site.baseurl }}" target="_blank">contributions</a> and ask that you read about our <a href="{{ '/conduct.html' | prepend: site.baseurl }}" target="_blank">standards of conduct</a>. You are also invited to <a href="{{ '/help.html' | prepend: site.baseurl }}" target="_blank">ask for help.</a>
 </p>
 
 <p>
