--- a/_packages/popeye.html
+++ b/_packages/popeye.html
@@ -1,6 +1,6 @@
 ---
 layout: package
-name: "Popeye"
+name: "popeye"
 tag: "popeye"
 doc: "http://kdesimone.github.io/popeye/"
 github: "https://github.com/kdesimone/popeye"
