--- a/_packages/niwidgets.html
+++ b/_packages/niwidgets.html
@@ -6,7 +6,7 @@ doc: "http://www.janfreyberg.com/niwidgets/"
 github: "https://github.com/janfreyberg/niwidgets"
 one-liner: "Provides interactive plots for volumetric images."
 description: "niwidgets provides you with interactive widgets for jupyter notebooks to plot neuroimaging data."
-category: "analysis-pipeline-management"
+category: "data-visualisation"
 ---
 
 <h2>Niwidgets allows you to:</h2>
