--- a/_packages/niwidgets.html
+++ b/_packages/niwidgets.html
@@ -2,8 +2,8 @@
 layout: package
 name: "niwidgets"
 tag: "niwidgets"
-doc: "http://www.janfreyberg.com/niwidgets/"
-github: "https://github.com/janfreyberg/niwidgets"
+doc: "http://www.nipy.org/niwidgets/"
+github: "https://github.com/nipy/niwidgets"
 one-liner: "Provides interactive plots for volumetric images."
 description: "niwidgets provides you with interactive widgets for jupyter notebooks to plot neuroimaging data."
 category: "data-visualisation"
