Update location nipype docs

--- a/_packages/nipype.html
+++ b/_packages/nipype.html
@@ -2,7 +2,7 @@
 layout: package
 name: "nipype"
 tag: "nipype"
-doc: "http://www.mit.edu/~satra/nipype-nightly/"
+doc: "https://nipype.readthedocs.io/en/latest/"
 github: "https://github.com/nipy/nipype"
 one-liner: "Provides a uniform interface to existing neuroimaging software."
 description: "Nipype provides a uniform interface to existing neuroimaging software and facilitates interaction between these packages within a single workflow."
