changing anatomical-mri to computational-anatomy

--- a/_packages/dipy.html
+++ b/_packages/dipy.html
@@ -6,5 +6,5 @@ doc: "http://nipy.org/dipy/"
 github: "https://github.com/nipy/dipy"
 one-liner: "Focuses on diffusion magnetic resonance imaging (dMRI) analysis."
 description: "Dipy is a free and open source software project focusing on diffusion magnetic resonance imaging (dMRI) analysis."
-category: "anatomical-mri"
+category: "computational-anatomy"
 ---
