--- a/help.html
+++ b/help.html
@@ -8,13 +8,13 @@ layout: default
 
 <p>Asking people for help and asking questions about technical matters can be intimidating, especially if you haven’t done that before. The following web-page is not a help forum. Rather it is a collection of advice about asking questions. For nipy-specific help, see the sections below.</p>
 
-<p>In the meantime here’s some non-nipy-related advice on how to ask questions .</p>
+<p>In the meantime <a href="http://www.catb.org/esr/faqs/smart-questions.html">here</a> is some non-nipy-related advice on how to ask questions .</p>
 
 <p>For nipy-specific questions you can use on of the following channels:</p>
 
 <h2>The neuroimaging mailing list</h2>
 
-<p>The neuroimaging list is an open mailing list, for discussion of issues related to neuroimaging and Python. No question will be turned away, but some might be diverted to other forums more relevant to the question. For example, questions about using Matplotlib for visualization may be directed to the MPL mailing list.</p>
+<p>The <a href="http://mail.scipy.org/mailman/listinfo/nipy-devel">neuroimaging list</a> is an open mailing list, for discussion of issues related to neuroimaging and Python. No question will be turned away, but some might be diverted to other forums more relevant to the question. For example, questions about using Matplotlib for visualization may be directed to the MPL mailing list.</p>
 
 <h2>Neurostars</h2>
 
