DOC: Mis-tagged subheader in conduct.html

--- a/conduct.html
+++ b/conduct.html
@@ -42,8 +42,9 @@ layout: default
 <li>Excessive or unnecessary profanity.</li>
 <li>Repeated harassment of others. In general, if someone asks you to stop, then stop.</li>
 <li>Advocating for, or encouraging, any of the above behaviour.</li>
-<li>Try to be concise in communication</li>
 </ul>
+
+<h4>Try to be concise in communication</h4>
 
 <p>Keep in mind that what you write once will be read by many others. Writing a short email means people can understand the conversation as efficiently as possible. Even short emails should always strive to be empathetic, welcoming, friendly and patient. When a long explanation is necessary, consider adding a summary.</p>
 
