--- a/_packages/dipy.html
+++ b/_packages/dipy.html
@@ -2,7 +2,7 @@
 layout: package
 name: "dipy"
 tag: "dipy"
-doc: "http://nipy.org/dipy/"
+doc: "http://dipy.org/"
 github: "https://github.com/nipy/dipy"
 one-liner: "Focuses on diffusion magnetic resonance imaging (dMRI) analysis."
 description: "Dipy is a free and open source software project focusing on diffusion magnetic resonance imaging (dMRI) analysis."
