ENH: Change DIPY repository organization to `dipy`
Change DIPY repository organization to `dipy`.

--- a/_packages/dipy.html
+++ b/_packages/dipy.html
@@ -3,7 +3,7 @@ layout: package
 name: "dipy"
 tag: "dipy"
 doc: "http://dipy.org/"
-github: "https://github.com/nipy/dipy"
+github: "https://github.com/dipy/dipy"
 one-liner: "Focuses on diffusion magnetic resonance imaging (dMRI) analysis."
 description: "Dipy is a free and open source software project focusing on diffusion magnetic resonance imaging (dMRI) analysis."
 category: "computational-anatomy"
