--- a/_packages/napari-nibabel.html
+++ b/_packages/napari-nibabel.html
@@ -3,7 +3,7 @@ layout: package
 name: "napari-nibabel"
 tag: "napari-nibabel"
 doc: "https://github.com/nipy/napari-nibabel/blob/main/README.md"
-github: "https://github.com/nipy/nibabel"
+github: "https://github.com/nipy/napari-nibabel"
 one-liner: "A napari I/O plugin for neuroimaging formats"
 description: "A napari I/O plugin for neuroimaging formats (via nibabel/pydicom)"
 category: "data-visualisation"
