ENH: Update description to explain what Napari is

--- a/_packages/napari-nibabel.html
+++ b/_packages/napari-nibabel.html
@@ -9,4 +9,8 @@ description: "A napari I/O plugin for neuroimaging formats (via nibabel/pydicom)
 category: "data-visualisation"
 ---
 
-<p>A napari i/o plugin for neuroimaging formats (via nibabel/pydicom). Note that this project is in an early prototype stage and is missing many features.</p>
+<p>A napari I/O plugin for neuroimaging formats (via nibabel/pydicom).</p>
+
+<p><a href="https://napari.org/">napari</a> is a fast, interactive, multi-dimensional image viewer for Python. It's designed for browsing, annotating, and analyzing large multi-dimensional images.</p>
+
+<p>Note that this project is in an early prototype stage and is missing many features.</p>
