ENH: Update one-liner/description and rearrange contents to reduce duplication.

--- a/_packages/napari-nibabel.html
+++ b/_packages/napari-nibabel.html
@@ -4,13 +4,13 @@ name: "napari-nibabel"
 tag: "napari-nibabel"
 doc: "https://github.com/nipy/napari-nibabel/blob/main/README.md"
 github: "https://github.com/nipy/napari-nibabel"
-one-liner: "A napari I/O plugin for neuroimaging formats"
-description: "A napari I/O plugin for neuroimaging formats (via nibabel/pydicom)"
+one-liner: "A plugin for the napari image viewer to view and annotate neuroimaging data"
+description: "A plugin for the napari image viewer to view and annotate neuroimaging data"
 category: "data-visualisation"
 ---
 
-<p>A napari I/O plugin for neuroimaging formats (via nibabel/pydicom).</p>
-
 <p><a href="https://napari.org/">napari</a> is a fast, interactive, multi-dimensional image viewer for Python. It's designed for browsing, annotating, and analyzing large multi-dimensional images.</p>
+
+<p>This plugin provides napari support for neuroimaging data via NiBabel and PyDICOM.</p>
 
 <p>Note that this project is in an early prototype stage and is missing many features.</p>
