--- a/_packages/napari-nibabel.html
+++ b/_packages/napari-nibabel.html
@@ -13,4 +13,4 @@ category: "data-visualisation"
 
 <p>This plugin provides napari support for neuroimaging data via NiBabel and PyDICOM.</p>
 
-<p>Note that this project is in an early prototype stage and is missing many features.</p>
+<p>Note that this plugin is in an early prototype stage and is missing many features.</p>
