--- a/_packages/napari-nibabel.html
+++ b/_packages/napari-nibabel.html
@@ -11,6 +11,6 @@ category: "data-visualisation"
 
 <p><a href="https://napari.org/">napari</a> is a fast, interactive, multi-dimensional image viewer for Python. It's designed for browsing, annotating, and analyzing large multi-dimensional images.</p>
 
-<p>This plugin provides napari support for neuroimaging data via NiBabel and PyDICOM.</p>
+<p>This plugin provides napari support for neuroimaging data via <a href="https://nipy.org/nibabel">NiBabel</a> and <a href="https://pydicom.github.io/pydicom">pydicom</a>.</p>
 
 <p>Note that this plugin is in an early prototype stage and is missing many features.</p>
