--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Welcome to NIPY. We are a <a href="https://en.wikipedia.org/wiki/Community_of_pr
 </p>
 
 <p>
-We develop the following projects:
+Our community includes the following projects:
 </p>
 
 <div class="panel-group" id="accordion">
