--- a/contribute.html
+++ b/contribute.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h1 style="padding-bottom:50px">How do you want to contribute?</h1>
-<p style="padding-bottom:100px">We invite all members of the community to contribute. Have an idea, research update, or conference summary? <a href="http://neuroimaging.tumblr.com/submit">submit it</a> right away, or <a href="http://neuroimaging.tumblr.com/ask">ask us a question</a>.</p>
+<p style="padding-bottom:100px">We invite all members of the community to contribute. Have a question, idea, research update, or conference summary? Please, find below the ways in which you can contribute.</p>
 
 <div class="row">
     <div class="col-md-6">
