--- a/_packages/mindboggle.html
+++ b/_packages/mindboggle.html
@@ -2,7 +2,7 @@
 layout: package
 name: "mindboggle"
 tag: "mindboggle"
-doc: "http://mindboggle.info/"
+doc: "https://mindboggle.info/"
 github: "https://github.com/nipy/mindboggle"
 one-liner: "Improves the accuracy, precision, and consistency of labeling &amp; morphometry of brain imaging data."
 description: "Mindboggle improves the accuracy, precision, and consistency of labeling and morphometry of brain imaging data."
