--- a/_packages/mne.html
+++ b/_packages/mne.html
@@ -2,7 +2,7 @@
 layout: package
 name: "MNE"
 tag: "mne"
-doc: "http://martinos.org/mne/stable/index.html"
+doc: "https://mne.tools/stable/index.html"
 github: "https://github.com/mne-tools/mne-python"
 one-liner: "Processes magnetoencephalography (MEG) and electroencephalography (EEG) data."
 description: "MNE is a software package for processing magnetoencephalography (MEG) and electroencephalography (EEG) data."
