--- a/_packages/nibabel.html
+++ b/_packages/nibabel.html
@@ -2,7 +2,7 @@
 layout: package
 name: "nibabel"
 tag: "nibabel"
-doc: "http://nipy.org/nibabel/"
+doc: "https://nipy.org/nibabel/"
 github: "https://github.com/nipy/nibabel"
 one-liner: "Read / write common neuroimaging file formats."
 description: "Nibabel aims to provide read/write access to some common neuroimaging file formats."
