--- a/_packages/nilearn.html
+++ b/_packages/nilearn.html
@@ -2,7 +2,7 @@
 layout: package
 name: "Nilearn"
 tag: "nilearn"
-doc: "http://nilearn.github.io"
+doc: "https://nilearn.github.io"
 github: "https://github.com/nilearn/nilearn"
 one-liner: "Fast and easy statistical learning on neuroimaging data."
 description: "Nilearn is a Python module for fast and easy statistical learning on neuroimaging data."
