--- a/_packages/nitime.html
+++ b/_packages/nitime.html
@@ -2,7 +2,7 @@
 layout: package
 name: "Nitime"
 tag: "nitime"
-doc: "http://nipy.org/nitime/"
+doc: "https://nipy.org/nitime/"
 github: "https://github.com/nipy/nitime"
 one-liner: "Time-series analysis of neuroscience data."
 description: "Nitime is a library for time-series analysis of neuroscience data."
