--- a/_packages/popeye.html
+++ b/_packages/popeye.html
@@ -2,7 +2,7 @@
 layout: package
 name: "popeye"
 tag: "popeye"
-doc: "http://kdesimone.github.io/popeye/"
+doc: "https://kdesimone.github.io/popeye/"
 github: "https://github.com/kdesimone/popeye"
 one-liner: "Population receptive field estimation"
 description: "Popeye is a library for estimation of population receptive fields (pRF), accelerated with Cython and multiprocessing"
