--- a/_packages/nipy.html
+++ b/_packages/nipy.html
@@ -2,7 +2,7 @@
 layout: package
 name: "Nipy"
 tag: "nipy"
-doc: "http://nipy.org/nipy/"
+doc: "https://nipy.org/nipy/"
 github: "https://github.com/nipy"
 one-liner: "Analysis of structural and functional neuroimaging data."
 description: "NIPY is not only the name of the Neuroimaging in Python community, but also a python project for analysis of structural and functional neuroimaging data."
